Complete initial HTML framework

--- a/index.html
+++ b/index.html
@@ -14,8 +14,30 @@
     </nav>
     <main>
       <form>
-        <label> <input
+        <label for="title">Title</label>
+        <input type="text" id="title">
+        <label for="body">Body</label>
+        <input type="text" id="body">
+        <button>Save</button>
+        <section>
+          <img src="./assets/search.svg" alt="magnifying-glass">
+          <input type="text" alt="Search ideas" id="search-box">
+        </section>
       </form>
+      <section>
+        <article>
+          <header>
+            <img src="./assets/star.svg" alt="star">
+            <img src="./assets/star-active.svg" alt="star-checked">
+            <img src="./assets/delete.svg" alt="delete-icon">
+          </header>
+          <h3>Placeholder Title</h3>
+          <p>Placeholder HELLO WORLD!</p>
+          <footer>
+            <img src="./assets/comment.svg" alt="add-comment">
+            <p>Comment</p>
+          </footer>
+      </section>
     </main>
   <script type="text/javascript" src="main.js"></script>
   </body>
