--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <body>
     <nav>
       <h1>IdeaBox</h1>
-      <section>
+      <section class="filter-show">
         <h2>Filter Starred Ideas</h2>
-        <button>Show Starred Ideas</button>
+        <div class="show-starred-button">
+          <button class="show-button">Show Starred Ideas</button>
+        </div>
       </section>
     </nav>
     <main>
