Import font family and add semantics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
     <title>Ideabox Project</title>
   </head>
   <body>
@@ -16,14 +18,16 @@
     </nav>
     <main>
       <form>
-        <label for="title">Title</label>
-        <input type="text" id="title">
-        <label for="body">Body</label>
-        <input type="text" id="body">
-        <button>Save</button>
-        <section>
-          <img src="./assets/search.svg" alt="magnifying-glass">
-          <input type="text" alt="Search ideas" id="search-box">
+        <div class="title-label">
+          <label for="title">Title</label>
+          <input type="text" class="title">
+          <label for="body">Body</label>
+          <input type="text" class="body">
+        </div>
+        <button class="save-button">Save</button>
+        <section class="search-field">
+          <img class="magnifying-glass" src="./assets/search.svg" alt="magnifying-glass">
+          <input type="text" placeholder="Search ideas" class="search-box">
         </section>
       </form>
       <section>
