--- a/index.html
+++ b/index.html
@@ -30,19 +30,22 @@
           <input type="text" placeholder="Search ideas" class="search-box">
         </section>
       </form>
-      <section>
-        <article>
+      <section class="idea-display">
+        <article class="idea-box">
           <header>
-            <img src="./assets/star.svg" alt="star">
-            <img src="./assets/star-active.svg" alt="star-checked">
-            <img src="./assets/delete.svg" alt="delete-icon">
+            <img src="./assets/star.svg" class="star" alt="star">
+            <img src="./assets/star-active.svg" class="star-checked" alt="star-checked">
+            <img src="./assets/delete.svg" class="delete-icon" alt="delete-icon">
           </header>
-          <h3>Placeholder Title</h3>
-          <p>Placeholder HELLO WORLD!</p>
+          <div class="idea-body">
+            <h3>Placeholder Title</h3>
+            <p>Placeholder HELLO WORLD!</p>
+          </div>
           <footer>
-            <img src="./assets/comment.svg" alt="add-comment">
+            <img src="./assets/comment.svg" class="add-comment" alt="add-comment">
             <p>Comment</p>
           </footer>
+        </article>
       </section>
     </main>
   <script type="text/javascript" src="main.js"></script>
