--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           </header>
           <div class="idea-body">
             <h3>Placeholder Title</h3>
-            <p>Placeholder HELLO WORLD!</p>
+            <p class="body-text">Placeholder HELLO WORLD!</p>
           </div>
           <footer>
             <img src="./assets/comment.svg" class="add-comment" alt="add-comment">
-            <p>Comment</p>
+            <p class="comment">Comment</p>
           </footer>
         </article>
       </section>
