--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </article>
       </section>
     </main>
+  <script type="text/javascript" src="Idea.js"></script>
   <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
