Disable save button and add classes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <label for="body">Body</label>
           <input type="text" class="body">
         </div>
-        <button class="save-button">Save</button>
+        <button class="save-button no-button" disabled>Save</button>
         <section class="search-field">
           <img class="magnifying-glass" src="./assets/search.svg" alt="magnifying-glass">
           <input type="text" placeholder="Search ideas" class="search-box">
