--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ideabox Project</title>
   </head>
   <body>
@@ -31,7 +32,7 @@
         </section>
       </form>
       <section class="idea-display">
-        <article class="idea-box">
+        <!-- <article class="idea-box">
           <header>
             <img src="./assets/star.svg" class="star" alt="star">
             <img src="./assets/delete.svg" class="delete-icon" alt="delete-icon">
@@ -44,7 +45,7 @@
             <img src="./assets/comment.svg" class="add-comment" alt="add-comment">
             <p class="comment">Comment</p>
           </footer>
-        </article>
+        </article> -->
       </section>
     </main>
   <script type="text/javascript" src="Idea.js"></script>
