Remove sample idea card

--- a/index.html
+++ b/index.html
@@ -32,20 +32,7 @@
         </section>
       </form>
       <section class="idea-display">
-        <!-- <article class="idea-box">
-          <header>
-            <img src="./assets/star.svg" class="star" alt="star">
-            <img src="./assets/delete.svg" class="delete-icon" alt="delete-icon">
-          </header>
-          <div class="idea-body">
-            <h3>Placeholder Title</h3>
-            <p class="body-text">Placeholder HELLO WORLD!</p>
-          </div>
-          <footer>
-            <img src="./assets/comment.svg" class="add-comment" alt="add-comment">
-            <p class="comment">Comment</p>
-          </footer>
-        </article> -->
+          <!-- Idea cards show here -->
       </section>
     </main>
   <script type="text/javascript" src="Idea.js"></script>
